2002-10-15  Darin Adler  <darin@apple.com>

        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::urlSelected):
	Move the special case of a different anchor within the same
	page into WebKit from here.

        * kwq/kdecore/kurl.h: Mark urlcmp as a friend.
        * kwq/KWQKURL.mm: (urlcmp): Implement the ignoreRef feature, which
	is needed to make the KHTMLPart::openURL function work right.

        * kwq/WebCoreBridge.h: Removed addBackForwardItemWithURL:anchor:
	and added URL method.
        * kwq/WebCoreBridge.mm: (-[WebCoreBridge URL]): Added.

2002-10-15  Darin Adler  <darin@apple.com>

	- fixed 3074558 -- frames multiply at: http://www.iarsn.com/

	The key was to make the name attribute work properly.

        * khtml/ecma/kjs_window.cpp:
        (Window::get): Enable the "name" attribute.
        (Window::put): Enable the "name" attribute, but don't do the
	conversion to an 8-bit string -- leave it as a QString.
        * kwq/WebCoreBridge.h: Add setName/name methods.
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge setName:]): Added. Calls part->setName().
        (-[WebCoreBridge name]): Added. Calls part->name().
        * kwq/kparts/part.h: Added setName/name to ReadOnlyPart.

        * kwq/KWQKHTMLPartImpl.mm: Remove old bogusish comment.

2002-10-15  Richard Williamson  <rjw@apple.com>

        Added text color to attributed string conversion.
        
        * kwq/WebCoreBridge.mm:
        (attributedString):

2002-10-15  Richard Williamson  <rjw@apple.com>

        Added API to get attributed string from bridge.
        Added API to get selection in terms of the DOM API
        from the bridge.
        
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (attributedString):
        (-[WebCoreBridge selectionStart]):
        (-[WebCoreBridge selectionStartOffset]):
        (-[WebCoreBridge selectionEnd]):
        (-[WebCoreBridge selectionEndOffset]):

2002-10-15  Darin Adler  <darin@apple.com>
